[gd_scene load_steps=16 format=3 uid="uid://dhf1ejyvnb8bi"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_n03um"]
[ext_resource type="MeshLibrary" uid="uid://bqrbyee1uqsrj" path="res://Tilesets/dungeon_tileset.tres" id="2_l4vgv"]
[ext_resource type="PackedScene" uid="uid://66xits4teq8l" path="res://Scenes/pause_menu.tscn" id="4_h3cdc"]
[ext_resource type="FontFile" uid="uid://dggs8uoeu4td2" path="res://Fonts/Dungeon Crawler CB.ttf" id="5_vnlv2"]
[ext_resource type="PackedScene" uid="uid://cexs1mod2mgrv" path="res://Resources/torch.tscn" id="6_p0kxb"]
[ext_resource type="PackedScene" uid="uid://rvuko8gf076g" path="res://Resources/hammer.tscn" id="7_q2gpk"]
[ext_resource type="PackedScene" uid="uid://dwius2m1s4dx5" path="res://Resources/great_sword.tscn" id="8_jbq5d"]
[ext_resource type="PackedScene" uid="uid://bv7yidujbkwi" path="res://Enemies/goblin_male.tscn" id="9_n7o15"]
[ext_resource type="PackedScene" uid="uid://g5towy6h11sy" path="res://Scenes/warrior.tscn" id="9_xlujn"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="10_sr8pd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kbhsx"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_l35y1"]
sky_material = SubResource("ProceduralSkyMaterial_kbhsx")

[sub_resource type="Environment" id="Environment_eekjw"]
background_mode = 2
sky = SubResource("Sky_l35y1")
ambient_light_color = Color(0.935992, 0.907529, 0.647222, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.02
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.935992, 0.907529, 0.647222, 1)
fog_light_energy = 0.02
fog_density = 0.1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqgal"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5o7t"]

[node name="Main" type="Node3D"]
script = ExtResource("1_n03um")
player_scene = ExtResource("9_xlujn")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_eekjw")

[node name="Warrior" parent="." instance=ExtResource("9_xlujn")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 1.33497, 0)
visible = false

[node name="Skeleton3D" parent="Warrior/Armature" index="0"]
bones/0/position = Vector3(0.0346507, 1.03013, -0.0341088)
bones/0/rotation = Quaternion(-0.0384613, -0.367427, -0.0148944, 0.929137)
bones/1/rotation = Quaternion(0.0705936, 0.0411761, -0.00845021, 0.996619)
bones/2/rotation = Quaternion(0.0976236, 0.0798818, -0.0212002, 0.991786)
bones/4/rotation = Quaternion(0.0976418, 0.0798769, -0.0211941, 0.991785)
bones/8/rotation = Quaternion(-0.0496273, -0.0107121, 0.00232932, 0.998708)
bones/10/rotation = Quaternion(-0.0651757, 0.177617, -0.00711536, 0.981913)
bones/13/rotation = Quaternion(0.616654, 0.374657, -0.587815, 0.365846)
bones/15/rotation = Quaternion(0.366738, -0.0691703, 0.0979158, 0.922568)
bones/17/rotation = Quaternion(-0.18371, 0.33629, 0.370589, 0.846064)
bones/19/rotation = Quaternion(-0.101299, 0.141229, -0.0769285, 0.981771)
bones/21/rotation = Quaternion(-0.0674447, 0.814164, 0.0322241, 0.575804)
bones/22/rotation = Quaternion(0.349389, 0.0347115, 0.0738481, 0.933418)
bones/25/rotation = Quaternion(0.661897, -0.339689, 0.54832, 0.381902)
bones/27/rotation = Quaternion(0.356974, 0.115308, 0.14822, 0.915043)
bones/29/rotation = Quaternion(-0.107681, -0.344863, -0.35042, 0.864107)
bones/31/rotation = Quaternion(0.000691682, -0.0574935, -0.15224, 0.98667)
bones/33/rotation = Quaternion(0.0423242, 0.658384, 0.00327293, 0.751484)
bones/34/rotation = Quaternion(-0.29579, -0.032101, 0.0456758, 0.95362)
bones/37/rotation = Quaternion(0.0727681, 0.268463, 0.95429, -0.109377)
bones/38/rotation = Quaternion(-0.39797, 0.118902, -0.0267118, 0.909268)
bones/39/rotation = Quaternion(0.581465, -0.0191859, -0.0494104, 0.811843)
bones/40/rotation = Quaternion(0.284221, -0.0661784, -0.00327811, 0.956467)
bones/42/rotation = Quaternion(-0.124006, -0.0475926, 0.980744, 0.143175)
bones/43/rotation = Quaternion(-0.321291, 0.0644073, -0.030704, 0.944289)
bones/44/rotation = Quaternion(0.70521, 0.0852349, 0.145261, 0.688704)

[node name="Arm" parent="Warrior/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.590083, -0.209911, 0.779577, 0.115465, -0.933739, -0.338819, 0.799043, 0.289945, -0.526746, -0.426608, 1.03427, -0.257004)

[node name="CollisionShape3D" parent="Warrior" index="2"]
disabled = true

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
mesh_library = ExtResource("2_l4vgv")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65535, 2, 65535, 0, 2, 0, 0, 2, 0, 65535, 2, 65534, 65534, 1048577, 1, 65534, 1, 1, 1, 1441793, 0, 2, 1441793, 65535, 2, 655361, 65533, 65535, 1048577, 65533, 0, 655361, 65534, 1, 655361, 65534, 65535, 1048579, 65534, 0, 655363, 65535, 1, 655363, 0, 1, 1441795, 0, 65534, 3, 65535, 65534, 1048579, 1, 65535, 3, 1, 0, 1441795, 2, 0, 1441793, 2, 65535, 1, 0, 65533, 1441792, 0, 65532, 1441792, 0, 65531, 1441792, 0, 65530, 1441792, 0, 65529, 1441792, 0, 65528, 1441792, 0, 65527, 1441792, 0, 65526, 1441792, 0, 65525, 1441792, 0, 65524, 1441792, 65535, 65524, 1048576, 65535, 65525, 1048576, 65535, 65526, 1048576, 65535, 65527, 1048576, 65535, 65528, 1048576, 65535, 65529, 1048576, 65535, 65530, 1048576, 65535, 65531, 1048576, 65535, 65532, 1048576, 65535, 65533, 1048576, 65535, 65523, 1048576, 65535, 65522, 1048576, 65535, 65521, 1048576, 0, 65523, 1441792, 0, 65522, 1441792, 0, 65521, 1441792, 1, 65520, 655360, 2, 65520, 655360, 3, 65520, 655360, 4, 65520, 655360, 65534, 65520, 655360, 65533, 65520, 655360, 65532, 65520, 655360, 65531, 65520, 655360, 65530, 65520, 655361, 65530, 65519, 1048576, 65530, 65518, 1048576, 65530, 65517, 1048576, 65530, 65512, 1048576, 65530, 65511, 1048576, 65530, 65510, 1048577, 65531, 65510, 0, 65532, 65510, 0, 65533, 65510, 0, 65534, 65510, 0, 65535, 65510, 0, 0, 65510, 0, 1, 65510, 0, 3, 65510, 0, 5, 65514, 1441792, 5, 65515, 1441792, 5, 65516, 1441792, 5, 65517, 1441792, 5, 65518, 1441792, 5, 65519, 1441792, 5, 65520, 1441793, 0, 65520, 1441795, 65535, 65520, 655363, 2, 65510, 0, 4, 65510, 0, 5, 65513, 1441792, 5, 65512, 1441792, 5, 65511, 1441792, 5, 65510, 1, 2, 65511, 655360, 3, 65512, 1048576, 1, 65512, 1441792, 2, 65513, 0, 3, 65511, 655363, 4, 65511, 2, 4, 65512, 2, 4, 65513, 2, 4, 65514, 2, 3, 65514, 2, 2, 65514, 2, 0, 65513, 2, 0, 65512, 2, 0, 65511, 2, 1, 65511, 1441795, 3, 65513, 1048579, 1, 65513, 3, 65530, 65513, 1048576, 65534, 65512, 1048576, 65533, 65511, 655360, 65532, 65512, 1441792, 65533, 65513, 0, 65534, 65511, 655363, 65534, 65513, 1048579, 65532, 65513, 3, 65532, 65511, 1441795, 65535, 65511, 1441794, 65535, 65512, 1441794, 65535, 65513, 1441794, 65532, 65514, 1441794, 65531, 65514, 1441794, 65531, 65513, 1441794, 65531, 65512, 1441794, 65531, 65511, 1441794, 2, 65519, 0, 1, 65518, 1441792, 2, 65517, 655360, 3, 65518, 1048576, 1, 65519, 3, 1, 65517, 1441795, 3, 65517, 655363, 3, 65519, 1048579, 0, 65519, 1048578, 0, 65518, 1048578, 0, 65517, 1048578, 2, 65515, 1048578, 3, 65515, 1048578, 4, 65515, 1048578, 4, 65516, 1048578, 3, 65516, 1048578, 2, 65516, 1048578, 4, 65517, 1048578, 4, 65518, 1048578, 4, 65519, 1048578, 65533, 65519, 0, 65532, 65518, 1441792, 65533, 65517, 655360, 65534, 65518, 1048576, 65534, 65519, 1048579, 65532, 65519, 3, 65532, 65517, 1441795, 65534, 65517, 655363, 65535, 65519, 655362, 65535, 65518, 655362, 65535, 65517, 655362, 65533, 65515, 655362, 65532, 65515, 655362, 65531, 65515, 655362, 65531, 65516, 655362, 65532, 65516, 655362, 65533, 65516, 655362, 65531, 65517, 655362, 65531, 65518, 655362, 65531, 65519, 655362, 65530, 65516, 1048576, 65530, 65515, 1048576, 65530, 65514, 1048576, 0, 65516, 0, 0, 65514, 655360, 1, 65515, 1048576, 1, 65516, 1048579, 1, 65514, 655363, 65535, 65516, 0, 65535, 65514, 655360, 65534, 65514, 1441795, 65534, 65516, 3, 65534, 65515, 1441792, 65533, 65514, 1441794)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="PauseMenu" parent="." instance=ExtResource("4_h3cdc")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vnlv2")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqgal")
text = "Host Game"

[node name="Join" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_vnlv2")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_j5o7t")
text = "Join Game"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/warrior.tscn")
spawn_path = NodePath("..")

[node name="Torches" type="Node3D" parent="."]

[node name="torch" parent="Torches" instance=ExtResource("6_p0kxb")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.80851, 1.6, 1.57733e-07)

[node name="torch2" parent="Torches" instance=ExtResource("6_p0kxb")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 5.8297, 1.6, -1.78002e-08)

[node name="GreatSword" parent="." instance=ExtResource("8_jbq5d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.48992, -1.78814e-07, -0.511967)

[node name="Hammer" parent="." instance=ExtResource("7_q2gpk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.92865, 1.78814e-07, -1.12404)

[node name="Goblin_Male" parent="." instance=ExtResource("9_n7o15")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.0414454, 0, -2.8442)

[node name="StateChartDebugger" parent="." instance=ExtResource("10_sr8pd")]
offset_left = 864.0
initial_node_to_watch = NodePath("../Warrior")

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]

[editable path="Warrior"]
